SERVER-48409 Fix race in establishCursors unittest